--- a/app/src/main/res/layout/activity_gorjeta.xml
+++ b/app/src/main/res/layout/activity_gorjeta.xml
@@ -95,4 +95,15 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewPorcentagem"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textViewPorcentagem" />
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="55dp"
+        android:onClick="fechar"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
