--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,4 +48,15 @@
         android:text="@string/txt_sensores"
         app:layout_constraintStart_toStartOf="@+id/button11"
         app:layout_constraintTop_toBottomOf="@+id/button11" />
+
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="34dp"
+        android:onClick="abrirMaps"
+        android:text="@string/txt_mapas"
+        app:layout_constraintStart_toStartOf="@+id/button12"
+        app:layout_constraintTop_toBottomOf="@+id/button12" />
 </androidx.constraintlayout.widget.ConstraintLayout>
